data/derived/sp14/progs/unify/prog1661.ml.out
Characters 8-11:
  let _ = abs -.40;;
          ^^^
Error: This expression has type int -> int
       but an expression was expected of type float
